feat/frontend multiples url comparison

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,3 +8,11 @@
     padding: .25em;
     color: black;
 }
+
+body{
+    background-color: #cfe2ff!important;
+}
+
+form > .card-body{
+    background-color: #052c65!important;
+}
